bootstrap/istio/validating_webhook_configuration/istiod-default-validator.yaml
---
# Auto-generated by Bootstrap.dump
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    battery/app: istiod
    battery/managed: 'true'
    istio: istiod
    istio.io/rev: default
  name: istiod-default-validator
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      service:
        name: istiod
        namespace: battery-istio
        path: /validate
    failurePolicy: Ignore
    name: validation.istio.io
    rules:
      - apiGroups:
          - security.istio.io
          - networking.istio.io
        apiVersions:
          - '*'
        operations:
          - CREATE
          - UPDATE
        resources:
          - '*'
    sideEffects: None
